populate swagger access token from local storage

--- a/src/templates/index.html.ejs
+++ b/src/templates/index.html.ejs
@@ -59,6 +59,7 @@
           ],
           plugins: [SwaggerUIBundle.plugins.DownloadUrl],
           layout: 'StandaloneLayout',
+          persistAuthorization: true,
         });
 
         window.ui = ui;
