use iframe-resizer

--- a/src/templates/index.html.ejs
+++ b/src/templates/index.html.ejs
@@ -35,6 +35,10 @@
         background: #fafafa;
       }
     </style>
+    <script
+      src="iframeResizer.contentWindow.min.js"
+      type="text/javascript"
+    ></script>
   </head>
 
   <body>
