Save access token in sessionStorage

--- a/src/templates/index.html.ejs
+++ b/src/templates/index.html.ejs
@@ -63,7 +63,7 @@
           ],
           plugins: [SwaggerUIBundle.plugins.DownloadUrl],
           layout: 'StandaloneLayout',
-          persistAuthorization: true,
+          // persistAuthorization: true,
         });
 
         window.ui = ui;
